feat: Add AI music generation and sound design capabilities
Introduces AI music generation and sound design features to the application, expanding its creative toolkit.

Updates include:
- Renaming the application and updating metadata to reflect new music generation capabilities.
- Integrating a new `MusicGenerator` component and a `SoundDesigner` component.
- Modifying the `App` component to include a new "AI Sound Designer" tab and handle music export functionality.
- Updating `types.ts` to include a new `AppTab.Sound` enum value.
- Adjusting `geminiService.ts` to use the 'gemini-2.5-flash-image' model and include error handling for API quota issues.
- Modifying `VideoGenerator.tsx` to remove the experimental video model and update default prompt.
- Enhancing `MusicGenerator.tsx` to support receiving an exported music prompt for continued generation.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-creative-suite:-photo,-video-&-image-generation",
+  "name": "ai-creative-suite:-photo,-video,-image-&-music-generation",
   "private": true,
   "version": "0.0.0",
   "type": "module",
